<resources>
    <string name="app_name">Pudding</string>
    <string name="default_pudding">Default Pudding</string>
    <string name="color_background">Color Background Pudding</string>
    <string name="icon_custom">Custom Icon Pudding</string>
    <string name="verbose_text">Verbose Text</string>
    <string name="infinite_pudding">Infinity Pudding</string>
    <string name="start_activity">Start An Activity</string>
    <string name="start_dialog">Normal Dialog</string>
    <string name="start_dialog_fancy">Fancy Dialog</string>
    <string name="loading">Loading Pudding</string>
    <string name="swipe_dismiss">Swipe Dismiss</string>
    <string name="listener">Show/Dismiss Listener</string>
    <string name="verbose_text_text">This is a verbose text . And has a lot of words . You can see this text is so long . 男人最怕的就是短啊。 所以长一点最好了，我喜欢，^_^</string>
    <string name="with_button">With Button</string>
</resources>
