<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/small_margin"
            tools:context=".MainActivity">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click1"
                android:text="@string/default_pudding"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click2"
                android:text="@string/color_background"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click3"
                android:text="@string/icon_custom"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click4"
                android:text="@string/verbose_text"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click5"
                android:text="@string/infinite_pudding"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click6"
                android:text="@string/loading"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click8"
                android:text="@string/swipe_dismiss"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click9"
                android:text="@string/listener"
                android:textAllCaps="false" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="click7"
                android:text="@string/with_button"
                android:textAllCaps="false" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_weight="1"
                    android:onClick="showAlertDialog"
                    android:text="@string/start_dialog"
                    android:textAllCaps="false" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:layout_weight="1"
                    android:onClick="showFancyDialog"
                    android:text="@string/start_dialog_fancy"
                    android:textAllCaps="false" />
        </LinearLayout>


        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:onClick="startAnActivity"
                android:text="@string/start_activity"
                android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
